fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,7 @@
 /* HTML */
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Body */
@@ -34,6 +35,7 @@ body {
   background-color: var(--primary);
   color: var(--primary);
   overflow-x: hidden;
+  position: relative;
 }
 
 /* Font Size */
@@ -68,7 +70,7 @@ p, li{
 #container-home {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   padding: 1.5rem;
   row-gap: 1rem;
   transition: all 600ms ease-in-out;
